--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <span class="stat">Baht: <strong><span id="goldText">50</span></strong></span>
       </div>
       <div id="controls">
-        <button id="button1">Go to drinking corner</button>
+        <button id="button1">Go to the drinking corner</button>
         <button id="button2">Try different food</button>
         <button id="button3">Eat Krapaw</button>
       </div>
