--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <button id="button3">Eat Krapaw</button>
       </div>
       <div id="monsterStats">
-        <span class="stat">Monster Name: <strong><span id="monsterName"></span></strong></span>
+        <span class="stat">Thai dish: <strong><span id="monsterName"></span></strong></span>
         <span class="stat">Health: <strong><span id="monsterHealth"></span></strong></span>
       </div>
       <div id="text">
