adding id to img

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="image">
-      <img src="/krapaw/774743243565865933.png"> </img>
+      <img id="market" src="/krapaw/774743243565865933.png"> </img>
     </div>
     <div id="game">
       
